2009-05-13  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Tapping the screen during the split second a fullscreen application
	is ceasing to be fullscreen does not result in the click reaching the
	application below.  Fixes NB#112423.

	* matchbox/core/mb-wm-client-base.c: map frame before reparenting
	window to it.

2009-05-13  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-client-base.c: use mb_wm_client_deliver_message()
	instead of attempting to do the identical work ourselves.
	* matchbox/core/mb-wm-client.c (mb_wm_client_deliver_message): returns
	a gboolean to indicate success.
	* matchbox/core/mb-wm-client.[ch] (mb_wm_client_get_next_focused_client):
	removed loop, rewrote as equivalent single line.
	* matchbox/core/mb-wm-props.[ch]: remove mb_wm_props_send_x_message()
	which is redundant (does exactly the same as
	mb_wm_client_deliver_message()) and is never used.

2009-05-13  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-client.c
	(mb_wm_client_get_last_focused_transient): Use
	mb_wm_stack_enumerate_reverse instead of mb_wm_stack_enumerate to
	enumerate from the top of the stack. Makes it a bit more efficient and
	readable.

2009-05-12  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#115698 - Windows not updating in some cases

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Removed usage of
	clutter GLX texture pixmaps as they currently don't work properly
	in scratchbox. Also disabled MBWMCompMgrClutterClientDontUpdate on
	scratchbox as this caused NB#115698 (It only existed as a minor
	performance improvement, and accuracy is more important in scratchbox)

2009-05-11  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.38

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_turn_on_real): Trap X errors and check that
	clutter_x11_get_stage_window succeeds. Fixes: NB#115724
	* matchbox/core/mb-window-manager.c (mb_wm_handle_map_notify): Trap X